<resources>
    <string name="app_name">Mobile Library</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="emailaddress">Email</string>
    <string name="uname">Enter your username</string>
    <string name="upassword">Enter your password</string>
</resources>